# Telos

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
.github/workflows/: cmake-single-platform.yml
build_tools/: build_web.sh  prerequisites.sh
debug/: CMakeCache.txt  Makefile  Telos  cmake_install.cmake
debug/lib/SDL2/: Makefile  cmake_install.cmake  cmake_uninstall.cmake  libSDL2-2.0d.so.0  sdl2.pc
debug/lib/SDL2/include/: SDL_revision.h
debug/lib/SDL2/include-config-debug/: SDL_config.h
documentation/Architectural Diagrams/: .$Controller Architecture.drawio.bkp  .$Controller Architecture.drawio.dtmp  .$Data Architecture.drawio.bkp  .$Engine Architecture.drawio.bkp  .$Engine Architecture.drawio.dtmp  .$MVC Overall Architecture.drawio.bkp  .$MVC Overall Architecture.drawio.dtmp  .$Overall Engine Architecture.drawio.bkp  .$Overall Engine Architecture.drawio.dtmp  .$View Architecture.drawio.bkp  .$View Architecture.drawio.dtmp  Controller Architecture.drawio  Data Architecture.drawio  Engine Architecture.drawio  MVC Overall Architecture.drawio  Overall Engine Architecture.drawio  View Architecture.drawio
include/: BUILD_EMCC.h  application_params.h  cartesian.h  controller.h  emscripten_browser_clipboard.h  engine_math.h  model.h  point_cloud_convex.h  shape.h  shape_utils.h  telos_events.h  telos_imgui_colors.h  telos_sdl2_animations.h  view.h
lib/: build_local.sh  debug_local.sh  release_local.sh  run_local.sh  run_web.sh
lib/imgui/: imgui_draw.cpp
src/: controller.cpp  main.cpp  model.cpp  point_cloud_convex.cpp  shape.cpp  shape_utils.cpp  telos_imgui_colors.cpp  telos_sdl2_animations.cpp  view.cpp
